--- a/code.store/src/main/resources/templates/register_success.html
+++ b/code.store/src/main/resources/templates/register_success.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html>
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Home</title>
+	<title>Success</title>
 	<link rel ="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
 	<div class="container text-center">
 		<div>
 			<h1>Welcome to Store</h1>
+			<h4><a th:href ="@{/login}">Click here to Login</a></h4>
 		</div>
-		<div>
-			<h3><a th:href="@{/register}">Register</a></h3>	
-		</div>
+		
 	</div>
 </body>
 </html>
