--- a/code.store/src/main/resources/templates/index.html
+++ b/code.store/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
 			<h1>Welcome to Store</h1>
 		</div>
 		<div>
+			<h3><a th:href=@{/login}>Login</a></h3>
 			<h3><a th:href="@{/register}">Register</a></h3>	
 		</div>
 	</div>
